--- a/index.html
+++ b/index.html
@@ -7,24 +7,17 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Blog preview card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
   <main class="wrapper">
     <div class="blog-container">
-      <img src="assets/images/illustration-article.svg" alt="" aria-hidden="true" class="blog-image">
+      <img src="assets/images/illustration-article.svg" aria-hidden="true" alt="" class="blog-image">
       <p class="blog-category">Learning</p>
       <p class="blog-meta">Published 21 Dec 2023</p>
 
       <h1 class="blog-title">HTML & CSS foundations</h1>
       <p class="blog-exerpt">These languages are the backbone of every website, defining structure, content, and presentation.</p>
-
       <div class="author-data">
         <img src="assets/images/image-avatar.webp" alt="author-image" class="author-image">
         <p class="author-name">Greg Hooper</p>
